OldArchive/438ab02547299e675063973b8cab8ae2-d6c803482d553f395422ddf5510f4bb0/output
+ g++ -std=c++11 -O2 -Wall -Wextra -pedantic -pthread main.cpp
main.cpp: In instantiation of ‘int get_foo(T&) [with T = Bar]’:
main.cpp:49:27:   required from here
main.cpp:37:45: error: ‘t’ is not a constant expression
     return GetFoo<T, has_foo<T>(t)>::value(t);
                                             ^
main.cpp:37:45: note: in template argument for type ‘bool’ 
main.cpp: In function ‘int get_foo(T&) [with T = Bar]’:
main.cpp:38:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
